# deborphan

./: COPYING  Makefile.am  NEWS  README  THANKS  configure.ac
doc/: deborphan.1
include/: Makefile.am  deborphan.h  set.h
src/: Makefile.am  deborphan.c  exit.c  file.c  keep.c  libdeps.c  pkginfo.c  set.c  string.c
